Fix banner text alignment
Fix fav icon on small screen (WIP)

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -76,9 +76,9 @@
   justify-content: center;
   align-items: center;
   h1 {
-    align-self: flex-start;
-    margin-left: 1.2rem;
-    padding-bottom: 1rem;
+    // align-self: flex-start;
+    // margin-left: 1.2rem;
+    padding:1rem 0;
     font-size: 1.8rem;
   }
 }
@@ -94,10 +94,13 @@
 
 @media only screen and (min-width: 768px) {
   .banner-content {
+    width: 80vw;
     padding: 1rem;
   }
   .banner h1 {
-    margin-left: 5.5rem;
-    padding-bottom: 1rem;
+    // margin-left: 8rem;
+    padding-bottom: 3rem;
+    font-size: 2rem;
+
   }
 }
