--- a/src/app/shared/components/job-card/job-card.component.scss
+++ b/src/app/shared/components/job-card/job-card.component.scss
@@ -9,8 +9,10 @@ a:visited {
   position: absolute;
   top: 0%;
   right: 0%;
-  margin-right: 1rem;
-  padding: 1.2rem;
+  // margin-right: 1rem;
+  margin-left: .5rem;
+  padding: 1rem;
+  // border: 1px solid green;
 }
 
 
@@ -20,4 +22,16 @@ fa-icon{
   &:hover{
     font-size: 1.8rem;
   }
+}
+
+@media only screen and (min-width:768px){
+  .fav-icon {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    margin-right: 1rem;
+    padding: 1.2rem;
+    // border: 1px solid red;
+  }
+
 }
